@@ -34,7 +34,7 @@ let reader_thread (ic, size) =
     let n = Unix.read ic buff 0 size in
 (*    print_string "reader "; print_int n; print_newline(); *)
     for i = 0 to n-1 do
-      if Bytes.get buff i = 'b' then Thread.exit()
+      if Bytes.get buff i = 'b' then raise Thread.Exit
       else if Bytes.get buff i <> 'a' then
         print_string "error in reader_thread\n"
     done
